# mcpDocker

./: .env  .gitignore  API_REFERENCE.md  Dockerfile  Dockerfile-live  chatgpt-api.py  chatgpt-mcp-server.py  chatgpt-plugin.py  deploy.sh  docker-compose.yml  live-api.py  live-openapi.json  openapi-schema.json  pyproject.toml  render-deploy.sh  requirements-chatgpt-mcp.txt  simple-mcp.py  simple_server.py  start-dual-servers.bat  start-dual-servers.sh  well-known-example.py
.amazonq/agents/: default.json
.amazonq/rules/: FastMCPURLs.md
.well-known/: openai-apps-challenge
mcpserver/: .env.example  Dockerfile  README_CLIENT.md  SCHEDULER_README.md  agent_api.py  backend-example.py  client-sse.py  combined_server.py  dev.bat  external_scheduler.py  manage.bat  manage.sh  render-scheduler.yaml  render-single.yaml  render.yaml  requirements.txt  scheduler.py  server.py  single_server.py  start.py  unified_server.py  web_server.py
mcpserver/auth/: login.py  register.py  simple_login.py  token_login.py  token_store.py  verify.py
mcpserver/cart/: add.py  decrement.py  remove.py  validation.py  view.py
mcpserver/orders/: checkout.py  management.py  validation.py
mcpserver/products/: combo.py  images.py  public.py  search.py
mcpserver/user/: address.py  profile.py
mcpserver/utils/: http.py
server/: client.py  weather.json  weather.py
